--- a/main.css
+++ b/main.css
@@ -108,3 +108,39 @@ header img {
 	margin-left: 20px;
 	margin-top: 100px;
 }
+
+.pokemon-card {
+	margin: 0 auto;
+	margin-top: 70px;
+	width: 50%;	
+	height: 50vh;
+	border-radius: 16px;
+	background-color: grey;
+	display: flex;
+	flex-direction: column;
+	justify-content: flex-start;
+	align-items: center;
+	font-family: 'Pokemon Gameboy', cursive;
+	font-size: 20px;
+}
+
+.pokemon-title {
+	width: 100%;
+	height: 10%;
+	text-align: center;
+	font-size: 2vw;
+}
+
+.pokemon-info {
+	margin-top: -30px;
+	margin-bottom: auto;
+	align-self: flex-start;
+	margin-left: 40px;
+	word-spacing: 13px;
+}
+
+.pokemon-img {
+	margin-top: -100px;
+	width: 40%;
+	padding: 0px;
+}
