--- a/main.css
+++ b/main.css
@@ -41,8 +41,21 @@ header img {
 	width: 74px;
 	height: 74px;
 	padding: 3px;
+	cursor: pointer;
+	transition: all 0.3s ease-in-out;
+}
+
+#poke-ball-img:hover {
+	transform: scale(1.3) rotate(30deg);
+}
+
+.poke-ball-container {
+	width: 74px;
+	height: 74px;
+	transition: all 0.3s ease-in-out;
 	animation: pokeball-animation 1.6s ease 0s 1 normal forwards;
 }
+
 @keyframes pokeball-animation {
 	0% {
 		animation-timing-function: ease-in;
@@ -53,12 +66,12 @@ header img {
 	38% {
 		animation-timing-function: ease-out;
 		opacity: 1;
-		transform: translateY(0);
+		transform: translateY(0) scale(1.5);
 	}
 
 	55% {
 		animation-timing-function: ease-in;
-		transform: translateY(-65px);
+		transform: translateY(-65px) scale(1.4);
 	}
 
 	72% {
@@ -68,7 +81,7 @@ header img {
 
 	81% {
 		animation-timing-function: ease-in;
-		transform: translateY(-38px);
+		transform: translateY(-38px) scale(1.2);
 	}
 
 	90% {
