--- a/main.css
+++ b/main.css
@@ -9,11 +9,13 @@ header {
 }
 
 header img {
-	width: 60vw;
+	width: 80%;
+	min-width: 400px;
 }
 
 #search-container {
 	width: 70vw;
+	min-width: 400px;
 	height: 80px;
 	display: flex;
 	flex-direction: row;
@@ -126,7 +128,8 @@ header img {
 	margin: 0 auto;
 	margin-top: 70px;
 	width: 50%;	
-	height: 55vh;
+	min-width: 250px;
+	min-height: 400px;
 	border-radius: 16px;
 	display: flex;
 	flex-direction: column;
@@ -140,20 +143,21 @@ header img {
 	width: 100%;
 	height: 10%;
 	text-align: center;
-	font-size: 2vw;
-	margin-bottom: 50px;
+	font-size: 30px;
+	font-weight: bold;
+	margin-bottom: 90px;
 }
 
 .pokemon-info {
+	font-size: 18px;
 	margin-top: -30px;
 	margin-bottom: auto;
-	align-self: flex-start;
-	margin-left: 40px;
-	word-spacing: 13px;
+	margin-left: 20px;
+	word-spacing: 10px;
 }
 
 .pokemon-img {
 	margin-top: -100px;
-	width: 40%;
+	width: 200px;
 	padding: 0px;
 }
